@@ -2,9 +2,14 @@
 %    SupportedFormats - lists all supported file formats
 %
 % Functions provided in this toolbox are the easiest way to access files.
-%    probeFile   - Reveal contents in a multi-record file (*.sda, *.pff, etc.)
-%    readFile    - Read data from a file
-%    writeFile   - Write data to a file
+%    probeFile     - Reveal contents in a multi-record file (*.sda, *.pff, etc.)
+%    readFile      - Read data from a file
+%    writeFile     - Write data to a file
+%
+%    mat2sda       - Convert MATLAB *.mat file to an archive
+%    sda2mat       - Convert archive to a MATLAB *.mat file
+%    sda2workspace - Load archive into current workspace
+%    workspace2sda - Save workspace variables to an archive
 %
 %    mergeSplits - Merge split SDA files into a complete file
 %    splitFile   - Split file across multiple SDA files
@@ -19,7 +24,7 @@
 %    PFFfile       - Sandia Portable File Format files
 %    SDAfile       - Sandia Data Archive files
 %
-% See also SMASH
+% See also SMASH, SMASHtoolbox
 %
 
-% Last updated December 5, 2014
+% Last updated November 20, 2016
