@@ -2,4 +2,6 @@ Version 1.0 was released in fall 2016.  A user manual was released as a technica
 
 Version 1.1 is tentatively scheduled for summer 2016.  Changes from version 1.0 are noted below.
 	-The FileAccess package now has a 'block' format to support text files with multiple blocks of column data..
-	
+	-The FileAccess package now supports the 'acqiris' format for Acqiris digitizer binary files.
+	-A new program "SDAbrowser" was added to the toolbox.
+	-SDA version 1.1 was released (manual under construction)
